# Meta-Search

./: Dockerfile  MANIFEST.in  README.md  main.py  minified.py  pypi support one.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  docker-image.yml
Scripts/: Activate.ps1  activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
api/: pyvenv.cfg
metasearch/: __init__.py
metasearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
netlify/: Dockerfile  README.md  main.py  minified.py
netlify/functions/: docker-compose.yml
